# haskellVCSWrapper

./: .gitignore  .travis.yml  README  sources.txt  vcswrapper.lkshs  vcswrapper.lkshw
common/: common.cabal  common.cabal~
common/src/Common/: Types.hs
git/: git.cabal  git.cabal~
git/src/Lib/Git/: Core.hs
svn/: svn.cabal
svn/src/Lib/: Svn.hs
svn/src/Lib/Svn/: Process.hs  Types.hs
svntest/: svntest.cabal
svntest/src/: Main.hs
vcswrapper/: vcswrapper.cabal  vcswrapper.cabal~
vcswrapper/src/: Main.hs  VCSWrapper.hs
vcswrapper/src/VCSWrapper/: Common.hs  Darcs.hs  Git.hs  Mercurial.hs  Svn.hs
vcswrapper/src/VCSWrapper/Common/: Process.hs  TemporaryFiles.hs  Types.hs  VCSMonad.hs
vcswrapper/src/VCSWrapper/Darcs/: Types.hs
vcswrapper/src/VCSWrapper/Git/: Parsers.hs  Process.hs  Safe.hs  Types.hs
vcswrapper/src/VCSWrapper/Mercurial/: Parsers.hs  Process.hs  Types.hs
vcswrapper/src/VCSWrapper/Svn/: Parsers.hs  Process.hs  Types.hs
