name: vcswrapper
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: MissingH -any, 
               base -any, 
               directory -any, 
               haddock -any, haskell98 -any, 
               haskell98 -any, hxt -any, 
               libgit -any, 
               mtl -any, 
               parsec -any, 
               process -any
stability:
homepage:
package-url:
bug-reports:
synopsis:
description: .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: VCSWrapper.Common VCSWrapper.Git VCSWrapper.Svn
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSWrapper VCSWrapper.Svn.Types
               VCSWrapper.Svn.Process VCSWrapper.Svn.Parsers VCSWrapper.Git.Types
               VCSWrapper.Git.Parsers VCSWrapper.Common.Types VCSWrapper.Git.Process
               VCSWrapper.Common.Process VCSWrapper.Common.TemporaryFiles
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: vcswrapper
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSWrapper VCSWrapper.Svn.Types
               VCSWrapper.Svn.Process VCSWrapper.Svn.Parsers VCSWrapper.Git.Types
               VCSWrapper.Git.Parsers VCSWrapper.Common.Types
               VCSWrapper.Common.Process VCSWrapper.Common.TemporaryFiles
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: