name: vcswrapper
version: 0.0.1
cabal-version: >=1.8
build-type: Simple
license: GPL
license-file: LICENSE
copyright: 2011 Stephan Fortelny, Harald Jagenteufel
maintainer: stephanfortelny at gmail.com, h.jagenteufel at gmail.com
build-depends: MissingH >=1.1.0.3 && <1.2, base >=4.0.0.0 && <4.4,
               directory >=1.1.0.0 && <1.2, haddock >=2.9.0 && <2.9.3,
               haskell98 >=1.1.0.1 && <1.2, hxt >=9.1.2 && <9.2,
               mtl >=2.0.1.0 && <2.1, parsec >=3.1.1 && <3.2,
               process >=1.0.1.5 && <1.1, filepath >=1.2.0.0 && <1.3,
               filepath >=1.2.0.0 && <1.3, process >=1.0.1.5 && <1.1,
               parsec >=3.1.1 && <3.2, mtl >=2.0.1.0 && <2.1, hxt >=9.1.2 && <9.2,
               haskell98 >=1.1.0.1 && <1.2, haddock >=2.9.0 && <2.9.3,
               directory >=1.1.0.0 && <1.2, base >=4.0.0.0 && <4.4,
               MissingH >=1.1.0.3 && <1.2, MissingH >=1.1.0.3 && <1.2,
               base >=4.0.0.0 && <4.4, directory >=1.1.0.0 && <1.2,
               haddock >=2.9.0 && <2.9.3, haskell98 >=1.1.0.1 && <1.2,
               hxt >=9.1.2 && <9.2, mtl >=2.0.1.0 && <2.1, parsec >=3.1.1 && <3.2,
               process >=1.0.1.5 && <1.1, filepath >=1.2.0.0 && <1.3,
               filepath >=1.2.0.0 && <1.3, process >=1.0.1.5 && <1.1,
               parsec >=3.1.1 && <3.2, mtl >=2.0.1.0 && <2.1, hxt >=9.1.2 && <9.2,
               haskell98 >=1.1.0.1 && <1.2, haddock >=2.9.0 && <2.9.3,
               directory >=1.1.0.0 && <1.2, base >=4.0.0.0 && <4.4,
               MissingH >=1.1.0.3 && <1.2
stability:
homepage: https://github.com/forste/haskellVCSWrapper
package-url:
bug-reports: https://github.com/forste/haskellVCSWrapper/issues
synopsis: Wrapper for source code management systems
description: Provides simple haskell functions to call external source code management systems.
             Currently git and SVN are supported.
category: Development
author: Stephan Fortelny, Harald Jagenteufel
tested-with: GHC ==7.0
data-files: LICENSE
data-dir: ""
extra-source-files: README
extra-tmp-files:
exposed-modules: VCSWrapper.Common VCSWrapper.Git VCSWrapper.Svn
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSWrapper.Mercurial.Process VCSWrapper.Mercurial
               VCSWrapper VCSWrapper.Svn.Types VCSWrapper.Svn.Process
               VCSWrapper.Svn.Parsers VCSWrapper.Git.Types VCSWrapper.Git.Parsers
               VCSWrapper.Common.Types VCSWrapper.Git.Process
               VCSWrapper.Common.Process VCSWrapper.Common.TemporaryFiles
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options:
 
executable: vcswrapper
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
default-language:
other-languages:
default-extensions:
other-extensions:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: VCSWrapper.Mercurial.Process VCSWrapper.Mercurial
               VCSWrapper VCSWrapper.Svn.Types VCSWrapper.Svn.Process
               VCSWrapper.Svn.Parsers VCSWrapper.Git.Types VCSWrapper.Git.Parsers
               VCSWrapper.Common.Types VCSWrapper.Common.Process
               VCSWrapper.Common.TemporaryFiles
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: